--- a/kotlin-marina/app/src/main/res/layout/dialog_payment_entry.xml
+++ b/kotlin-marina/app/src/main/res/layout/dialog_payment_entry.xml
@@ -7,6 +7,7 @@
     android:padding="16dp">
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/amountLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="المبلغ">
