--- a/kotlin-marina/app/src/main/res/layout/activity_settings_users.xml
+++ b/kotlin-marina/app/src/main/res/layout/activity_settings_users.xml
@@ -40,7 +40,7 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/changePasswordButton"
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                    style="@style/Widget.Material3.Button.OutlinedButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
@@ -111,7 +111,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/manageUsersButton"
-            style="@style/Widget.MaterialComponents.Button.FilledButton"
+            style="@style/Widget.Material3.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
