--- a/kotlin-marina/app/src/main/res/layout/item_employee.xml
+++ b/kotlin-marina/app/src/main/res/layout/item_employee.xml
@@ -81,14 +81,14 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/editButton"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
+                style="@style/Widget.Material3.Button.TextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="تعديل" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/salaryButton"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
+                style="@style/Widget.Material3.Button.TextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="صرف راتب" />
