--- a/kotlin-marina/app/src/main/res/layout/activity_booking_checkout.xml
+++ b/kotlin-marina/app/src/main/res/layout/activity_booking_checkout.xml
@@ -81,14 +81,14 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/addPaymentButton"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
+                style="@style/Widget.Material3.Button.TextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="إضافة دفعة" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/completeCheckoutButton"
-                style="@style/Widget.MaterialComponents.Button.FilledButton"
+                style="@style/Widget.Material3.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="إكمال الخروج"
