--- a/kotlin-marina/app/src/main/res/layout/activity_employees_list.xml
+++ b/kotlin-marina/app/src/main/res/layout/activity_employees_list.xml
@@ -67,7 +67,7 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/addEmployeeButton"
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                    style="@style/Widget.Material3.Button.OutlinedButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="موظف جديد"
