--- a/kotlin-marina/app/src/main/res/layout/activity_main.xml
+++ b/kotlin-marina/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/actionBookings"
-                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                                style="@style/Widget.Material3.Button.OutlinedButton"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_columnWeight="1"
@@ -78,7 +78,7 @@
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/actionRooms"
-                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                                style="@style/Widget.Material3.Button.OutlinedButton"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_columnWeight="1"
@@ -88,7 +88,7 @@
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/actionPayments"
-                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                                style="@style/Widget.Material3.Button.OutlinedButton"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_columnWeight="1"
@@ -98,7 +98,7 @@
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/actionReports"
-                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                                style="@style/Widget.Material3.Button.OutlinedButton"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_columnWeight="1"
