--- a/kotlin-marina/app/src/main/res/layout/item_booking.xml
+++ b/kotlin-marina/app/src/main/res/layout/item_booking.xml
@@ -78,14 +78,14 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/paymentButton"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
+                style="@style/Widget.Material3.Button.TextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="المدفوعات" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/checkoutButton"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
+                style="@style/Widget.Material3.Button.TextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="إنهاء" />
