--- a/kotlin-marina/app/src/main/res/values-v29/themes.xml
+++ b/kotlin-marina/app/src/main/res/values-v29/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <style name="Theme.MarinaHotel" parent="Theme.Material3.DayNight.NoActionBar">
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <style name="Theme.MarinaHotel" parent="Base.Theme.MarinaHotel">
         <item name="android:forceDarkAllowed">false</item>
     </style>
 </resources>
