--- a/kotlin-marina/app/src/main/res/menu/menu_bookings.xml
+++ b/kotlin-marina/app/src/main/res/menu/menu_bookings.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_refresh"
         android:icon="@android:drawable/ic_popup_sync"
         android:title="تحديث"
-        android:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_payments"
         android:icon="@android:drawable/ic_menu_send"
         android:title="المدفوعات"
-        android:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom" />
 </menu>
