--- a/kotlin-marina/app/src/main/res/menu/menu_rooms.xml
+++ b/kotlin-marina/app/src/main/res/menu/menu_rooms.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_sync"
         android:icon="@android:drawable/ic_popup_sync"
         android:title="مزامنة"
-        android:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom" />
 </menu>
