Use app tint attributes to satisfy lint

--- a/kotlin-marina/app/src/main/res/layout/view_quick_action.xml
+++ b/kotlin-marina/app/src/main/res/layout/view_quick_action.xml
@@ -22,7 +22,7 @@
             android:id="@+id/iconView"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:tint="@color/primaryColor" />
+            app:tint="@color/primaryColor" />
 
         <TextView
             android:id="@+id/titleView"
