--- a/kotlin-marina/app/src/main/res/layout/activity_employees_list.xml
+++ b/kotlin-marina/app/src/main/res/layout/activity_employees_list.xml
@@ -39,7 +39,7 @@
                     android:layout_width="56dp"
                     android:layout_height="56dp"
                     android:src="@android:drawable/ic_menu_myplaces"
-                    android:tint="@color/primaryColor" />
+                    app:tint="@color/primaryColor" />
 
                 <LinearLayout
                     android:layout_width="0dp"
