--- a/kotlin-marina/app/src/main/res/layout/activity_main.xml
+++ b/kotlin-marina/app/src/main/res/layout/activity_main.xml
@@ -128,7 +128,7 @@
                             android:layout_width="64dp"
                             android:layout_height="64dp"
                             android:src="@android:drawable/ic_dialog_info"
-                            android:tint="@color/primaryColor" />
+                            app:tint="@color/primaryColor" />
 
                         <LinearLayout
                             android:layout_width="0dp"
