--- a/kotlin-marina/app/src/main/res/layout/item_employee.xml
+++ b/kotlin-marina/app/src/main/res/layout/item_employee.xml
@@ -26,7 +26,7 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:src="@android:drawable/ic_menu_camera"
-                android:tint="@color/primaryColor" />
+                app:tint="@color/primaryColor" />
 
             <LinearLayout
                 android:layout_width="0dp"
