--- a/kotlin-marina/app/src/main/res/layout/view_settings_item.xml
+++ b/kotlin-marina/app/src/main/res/layout/view_settings_item.xml
@@ -19,7 +19,7 @@
             android:id="@+id/iconView"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:tint="@color/primaryColor" />
+            app:tint="@color/primaryColor" />
 
         <TextView
             android:id="@+id/titleView"
